[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mzml-utils"
version = "0.1.0"
description = "Utilities for mzML mass spectrometry file processing, fragment ion calculation, and peak matching"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    {name = "Longping Fu"},
]
keywords = ["mass spectrometry", "mzML", "proteomics", "glycoproteomics", "fragment ions"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry",
]
dependencies = [
    "pyteomics>=4.7",
    "numpy>=1.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[project.urls]
Homepage = "https://github.com/longpingfu/mzml-utils"
Repository = "https://github.com/longpingfu/mzml-utils"
Issues = "https://github.com/longpingfu/mzml-utils/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
